2005-09-15  Igor Foox <ifoox@redhat.com>

	* configure.ac: Changed all references to jg-common to glib-java.
	* Makefile.am: Changed reference to libjgjni-0.1 to libglibjni.
	* frysk/gui/monitor/EggTrayIcon.java, 
	frysk/gui/srcwin/SourceBuffer.java, 
	frysk/gui/srcwin/SourceViewWidget.java: Changed references to
	org.gnu.javagnome to org.gnu.glib. 

005-09-14  Adam Jocksch <ajocksch@redhat.com>

	* Makefile.am (GEN_CLASSPATH): Added frysk-imports/cdtparser.jar.
	(GEN_GCJ_LDADD): Added frysk-imports/libcdtparser.a.

2005-09-12  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Simplify; append all libraries to GEN_GCJ_LDADD.

2005-09-11  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Instead of LDADD, append to GEN_GCJ_LDADD.

	* Makefile.am: Delete rules for EggTrayIcon.
	* configure.ac: Update path to EggTrayIcon directory in
	JAVA_LIBRARY_PATH.  Do not check for gtk+-2.0.
	* EggTrayIcon/eggtrayicon.c, EggTrayIcon/eggtrayicon.h,
	EggTrayIcon/libEggTrayIcon.c: Delete; moved to frysk-imports.

2005-09-10  Andrew Cagney  <cagney@redhat.com>

	* COPYING, EXCEPTION: New files; copyright of all files updated.

2005-09-09  Andrew Cagney  <cagney@redhat.com>

	* configure.ac: Simplify, sinclude common/acinclude.m4.
	
	* configure.ac (JAVAC): Set using AC_CHECK_PROGS.

	* configure.ac: Simplify, remove AC_SUBST for variables already
	defined and stubsituted by PKG_CHECK_MODULES.
	* Makefile.am: Clean up deleting all commented out definitions.
	Append LDADD to all program specific LDADD files.  Define
	AM_GCJFLAGS instead of GCJFLAGS.  Do not link against
	EggTrayIcon.a.

	* .cvsignore: New file.

2005-09-10  Igor Foox  <ifoox@redhat.com>

	* EggTrayIcon/libEggTrayIcon.c: Updated to reflect previous
	domain move.

2005-09-09  Andrew Cagney  <cagney@redhat.com>

	* autogen.sh, Makefile.am: Update to reflect move of
	com.redhat.fedora.frysk to frysk.

2005-09-08  Igor Foox  <ifoox@redhat.com>

	* ChangeLog: new file.