@@ -57,11 +57,11 @@ GLADE_JAR=`$PKG_CONFIG --variable classpath glade-java`
 AC_MSG_RESULT($GLADE_JAR)
 AC_SUBST(GLADE_JAR)
 
-PKG_CHECK_MODULES(JGCOMMON, glib-java >= 0.2)
+PKG_CHECK_MODULES(GLIB_JAVA, glib-java >= 0.2)
 AC_MSG_CHECKING(for glib-java jar file)
-JGCOMMON_JAR=`$PKG_CONFIG --variable classpath glib-java`
-AC_MSG_RESULT($JGCOMMON_JAR)
-AC_SUBST(JGCOMMON_JAR)
+GLIB_JAVA_JAR=`$PKG_CONFIG --variable classpath glib-java`
+AC_MSG_RESULT($GLIB_JAVA_JAR)
+AC_SUBST(GLIB_JAVA_JAR)
 
 RPATH=${libdir}:`cd ../frysk-imports/EggTrayIcon && pwd`:`$PKG_CONFIG --libs-only-L gtk+-2.0 gtk2-java glade-java cairo-java glib-java | sed -e 's/  */:/' -e 's/-L//'  -e 's/:*$//'`
 AC_SUBST(RPATH)
