@@ -65,6 +65,6 @@ AC_MSG_RESULT([$ANTLR_JAR])
 dnl For EggTrayIcon
 export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/opt/lib/pkgconfig
 PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.7.0)
-PKG_CHECK_MODULES(JGCOMMON, glib-java >= 0.2)
+PKG_CHECK_MODULES(GLIB_JAVA, glib-java >= 0.2)
 
 AC_OUTPUT
